# mas

./: .gitignore  FILES_REVIEW.md  README.md  TRACING_GUIDE.md  approach1_sync.py  approach2_async.py  demo_bugs.py  demo_openai.py  env_example.txt  final_demo.py  inference_scaling_lab.py  llm_utils.py  main.py  patch_utils.py  pyproject.toml  real_llm.py  requirements.txt  sandbox_runner.py  sweep.py  test_cases.py  test_code_sample.py  test_patches.py  ИТОГОВЫЙ_ОТЧЁТ.md
.github/workflows/: ci.yml
docs/: FILES_REVIEW.md  SETUP_OPENAI.md  РЕЗУЛЬТАТЫ.md
examples/: demo.py
src/mas/: __init__.py
src/mas/analytics/results/: sweep_results_20250909_213735.csv  sweep_results_20250909_214358.csv
src/mas/approaches/: __init__.py  async_.py  sync.py
src/mas/approaches/iterative/: __init__.py  core.py  runner.py
src/mas/cli/: _shim.py  baseline.py  compare.py  demo.py  demo_bugs.py  demo_openai.py  final_demo.py  iterative.py  main.py  test_patches.py
src/mas/config/: __init__.py  settings.py
src/mas/evaluation/: __init__.py  patching.py  sandbox.py  test_cases.py
src/mas/experiments/: __init__.py  inference_scaling_lab.py  scaling_lab.py  sweep.py
src/mas/llm/: __init__.py  mock_client.py  openai_client.py
src/mas/utils/: __init__.py  logging.py
