[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mas"
version = "0.1.0"
description = "MAS system for automated bug fixing (demo)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "MAS Team" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

